modules/gdscript/tests/scripts/analyzer/errors/assign_constant.gd
enum { VALUE }
enum NamedEnum { VALUE }

const CONST = 0

signal signal_1
signal signal_2

func test():
	VALUE = 1
	NamedEnum = {}
	NamedEnum.VALUE = 1
	CONST = 1
	signal_1 = signal_2
